samples/_failures_safe/1761463686_7c660a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_279afe3c.c: In function ‘main’:
./samples/SAFE/__tmp_279afe3c.c:160:27: error: missing terminating " character
  160 |     cols2 = get_valid_int("Columns (
      |                           ^~~~~~~~~~
./samples/SAFE/__tmp_279afe3c.c:160:5: error: expected expression at end of input
  160 |     cols2 = get_valid_int("Columns (
      |     ^~~~~
./samples/SAFE/__tmp_279afe3c.c:160:13: error: too few arguments to function ‘get_valid_int’
  160 |     cols2 = get_valid_int("Columns (
      |             ^~~~~~~~~~~~~
./samples/SAFE/__tmp_279afe3c.c:119:5: note: declared here
  119 | int get_valid_int(const char *prompt, int min, int max) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_279afe3c.c:160:5: error: expected declaration or statement at end of input
  160 |     cols2 = get_valid_int("Columns (
      |     ^~~~~
